@@ -15,6 +15,8 @@ Fixes:
 - Issue 46: "Array literals in GEL"
 - Issue 55: "Use stable sorting for text facets sorted by count"
 - Issue 53: "Moving the cursor inside the Text Filter box by clicking"
+- Issue 58:	"Meta facet"
+  Supported by the function facetCount()
 
 Features:
 - Row/record sorting (Issue 32)
